--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,13 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react",
-    "outDir": "dist"
+    "outDir": "dist",
+    "noEmit": true
   },
   "include": [
     "src/index.tsx"
