--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-seo-aio",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "The all in one solution for react and stuff like meta tags.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,6 +32,7 @@
     "@types/react-dom": "^16.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-scripts": "^4.0.0",
     "typescript": "~3.7.2"
   }
 }
