switch from components to plain functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "isolatedModules": true,
     "jsx": "react",
     "outDir": "dist",
-    "noEmit": false,
+    "noEmit": true,
     "noFallthroughCasesInSwitch": true
   },
   "include": [
